Rewrite TV scanner to group episodes by series, remove dead code
TvScanner now resolves each series' TMDb title at most once per run
regardless of episode count, by grouping new episode files via
embedded tmdb-id, show folder, or normalized name. Also drops
DeadCode.java, the superseded TvShowScanner.java, and MediaParserV2.java,
expands the OTT platform list, and adds structured logging across
DatabaseApp, TmdbApiClient, MediaFile, MediaParser, and CollectionUtils.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>